--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,7 +58,7 @@ main {
     content: "";
     height: 8em;
     width: 8em;
-    border: 1em solid #3a0ca3;
+    border: 1em solid #469d89;
     border-radius: 50%;
     animation: loader_79178 2s linear infinite;
   }
@@ -70,13 +70,13 @@ main {
   
   @keyframes loader_79178 {
     0% {
-      border: 1em solid #3a0ca3;
+      border: 1em solid #469d89;
       transform: scale(0);
       opacity: 1;
     }
   
     100% {
-      border: 0 solid #3a0ca3;
+      border: 0 solid #469d89;
       transform: scale(1);
       opacity: 0;
     }
@@ -89,5 +89,5 @@ main {
 
 
 .btn-menu:hover {
-  box-shadow: 1px 1px 6px #3a0ca3; 
+  box-shadow: 1px 1px 6px #469d89; 
 }
